retrieveUnpackaged/objects/OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>BatchNumber__c</fullName>
        <description>VBAP-CHARG / LIPS-CHARG /</description>
        <label>Batch Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeDate__c</fullName>
        <description>VBAP-AEDAT / LIPS-AEDAT /</description>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreationDate__c</fullName>
        <description>VBAP-ERDAT / LIPS-ERDAT /</description>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>Order__r.Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <description>/</description>
        <label>Delivery Number</label>
        <referenceTo>Delivery__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>/</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ItemCategoryDesc__c</fullName>
        <description>TVAPT-VTEXT / LIPS-VTEXT /</description>
        <label>Item Category Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemCategory__c</fullName>
        <description>VBAP-PSTYV / LIPS-PSTYV /</description>
        <label>Item Category</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemNetValue__c</fullName>
        <description>( = vbap-netwr * delivery quantity / order quantity) /</description>
        <label>Item Net Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemNumber__c</fullName>
        <description>Open Item / VBAP-POSNR / SAP Item number
Return Item / VBAP-POSNR
Delivery Item / LIPS-POSNR</description>
        <label>Item Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemType__c</fullName>
        <description>/ in, out or cons.</description>
        <label>Item Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialDesc__c</fullName>
        <description>VBAP-ARKTX
LIPS -ARKTX /</description>
        <label>Material Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>/</description>
        <label>Model Number</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderQuantity__c</fullName>
        <description>VBAP-KWMENG
LIPS -LIFMG /</description>
        <label>Order Quantity</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>/</description>
        <label>Order Number</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <formula>Order__r.Patient__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedDeliveryDate__c</fullName>
        <description>To be defined by Urs Henle / The planned delivery date for each order item. The actual delivery date can be found on the delivery record.</description>
        <label>Planned Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesText__c</fullName>
        <description>Sales Text / TLINE-TDLINE /</description>
        <label>Sales Text</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesUnit__c</fullName>
        <description>VBAP-VRKME / LIPS -VRKME /</description>
        <label>Sales Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapDeliveryNumber__c</fullName>
        <description>/ Optional  technical field. Not shown in the UI</description>
        <formula>Delivery__r.DeliveryNumber__c</formula>
        <label>SAP Delivery Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapMaterialDesc__c</fullName>
        <description>/</description>
        <formula>Material__r.MaterialDesc__c</formula>
        <label>SAP Material Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapMaterialNumber__c</fullName>
        <description>Open Item / VBAP-MATNR
Return Item / VBAP-MATNR
Delivery Item / LIPS -MATNR / Optional  technical field. Not shown in the UI</description>
        <formula>Material__r.MaterialNumber__c</formula>
        <label>SAP Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapOrderNumber__c</fullName>
        <description>/ Optional  technical field. Not shown in the UI</description>
        <formula>Order__r.OrderNumber__c</formula>
        <label>SAP Order Number</label>
        <type>Text</type>
    </fields>
    <label>Order Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>